--- a/preferences-add.html
+++ b/preferences-add.html
@@ -1,6 +1,6 @@
-<div id="idAddMain" style="DISPLAY: none; z-index: 2;">
-<div style="background: #FF9D00; margin: 0 0 0 0; padding: 0px 0px 0px 0px; font-size: 16px; border-bottom: 15px solid #FF2A13; color: #000000;font-size: 18px;"><img id="idAddMainidLogo" />metro mobile: add location</div>
-<div style="margin: 0 10px 0 8px;">
+<div id="idAddMain" class="CSPrefMain">
+<div class="CsMainHeader"><img id="idAddMainidLogo" />metro mobile: add location</div>
+<div class="CsMainBody">
 <form name="nmAddForm" action="javascript:fnAddLoc();">
 name:<br />
 <input name="nmLocName" size="25" maxlength="80" /><br />
@@ -11,13 +11,13 @@ location:<br />
 </form>
 
 
-<div style="float: right;"><a href="javascript:fnSwitchPage('idPrefMenu');">preferences</a></div>
+<div class="CsRightLink"><a href="javascript:fnSwitchPage('idPrefMenu');">preferences</a></div>
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><hr />
 
-<div style="font-size: x-small;">copyright 2010 nicholas barnard</div>
+<div class="CsCopyrightFooter">copyright 2010 nicholas barnard</div>
 </div>
 </div>
-<div id="idAddSuccessModal" class="modalpage" style="display: none;"><div class="modalpopup">
-location &quot;<span id="idAddSuccessItem"></span>&quot; added<br /><br /><input type="button" value="add another location" class="modalokay" onClick="document.nmAddForm.nmLocAddress.value='';document.nmAddForm.nmLocName.value='';fnShowHide('idAddSuccessModal');"><br /> <br /> 
-<input type="button" value="back to preferences" class="modalokay" onClick="document.nmAddForm.nmLocAddress.value='';document.nmAddForm.nmLocName.value='';fnShowHide('idAddSuccessModal');fnSwitchPage('idPrefMenu');"> 
+<div id="idAddSuccessModal" class="CSModalPage" style="display: none;"><div class="CSModalPopup">
+location &quot;<span id="idAddSuccessItem"></span>&quot; added<br /><br /><input type="button" value="add another location" class="CSModalButton" onClick="document.nmAddForm.nmLocAddress.value='';document.nmAddForm.nmLocName.value='';fnShowHide('idAddSuccessModal');"><br /> <br /> 
+<input type="button" value="back to preferences" class="CSModalButton" onClick="document.nmAddForm.nmLocAddress.value='';document.nmAddForm.nmLocName.value='';fnShowHide('idAddSuccessModal');fnSwitchPage('idPrefMenu');"> 
 </div></div>
