--- a/preferences-menu.html
+++ b/preferences-menu.html
@@ -1,6 +1,6 @@
 <div id="idPrefMenu" style="DISPLAY: block;z-index: 2;">
-<div style="background: #FF9D00; margin: 0 0 0 0; padding: 0px 0px 0px 0px; font-size: 16px; border-bottom: 15px solid #FF2A13; color: #000000;font-size: 18px;"><img id="idPrefMenuidLogo" />metro mobile: preferences</div>
-<div style="margin: 0 10px 0 8px;">
+<div class="CsMainHeader"><img id="idPrefMenuidLogo" />metro mobile: preferences</div>
+<div class="CsMainBody">
 <br /><div style="font-size: medium;">manage stored addresses:</div>
 <ul>
 <li><a href="javascript:fnSwitchPage('idAddMain');">add</a></li>
@@ -13,8 +13,8 @@
 <li><a href="javascript:fnLoadTripDefaults();">trip defaults</a></li>
 </ul>
 <br />
-<div style="float: right;"><a href="index.html">main</a></div><br /><hr />
-<div style="font-size: x-small;">copyright 2010 nicholas barnard</div><br /><br/>
+<div class="CsRightLink"><a href="index.html">main</a></div><br /><hr />
+<div class="CsCopyrightFooter">copyright 2010 nicholas barnard</div><br /><br/>
 </div>
 </div>
 
