--- a/preferences-reorder.html
+++ b/preferences-reorder.html
@@ -1,14 +1,14 @@
-<div id="idReorderMain" style="DISPLAY: none; z-index: 2;">
+<div id="idReorderMain" class="CSPrefMain">
 <div style="background: #FF9D00; margin: 0 0 0 0; padding: 0px 0px 0px 0px; font-size: 16px; border-bottom: 15px solid #FF2A13; color: #000000;font-size: 18px;"><img id="idReorderMainidLogo" />
 metro mobile: reorder locations</div>
 <div style="margin: 0;">
-<div style="float: right;"><input type="button" value="cancel" onclick="fnUnloadReorder();fnSwitchPage('idPrefMenu');"></div>
+<div class="CsRightLink"><input type="button" value="cancel" onclick="fnUnloadReorder();fnSwitchPage('idPrefMenu');"></div>
 <input type="button" value="save locations" onclick="fnUnloadReorder();fnSaveCookieArray();fnSwitchPage('idPrefMenu');" />
 <table id="idReorderList" style="width:100%;border-collapse:collapse;"></table>
 
 
 <br />
-<div style="font-size: x-small;">copyright 2010 nicholas barnard</div>
+<div class="CsCopyrightFooter">copyright 2010 nicholas barnard</div>
 
 </div>
 </div>
