--- a/preferences-menu.html
+++ b/preferences-menu.html
@@ -3,7 +3,7 @@
 <div class="CsMainBody">
 <br /><div style="font-size: medium;">manage stored addresses:</div>
 <ul>
-<li><a href="javascript:fnSwitchPage('idAddMain');">add</a></li>
+<li><a href="javascript:document.nmAddForm.nmLocAddress.value='';document.nmAddForm.nmLocName.value='';fnSwitchPage('idAddMain');">add</a></li>
 <li><a href="javascript:fnLoadModify();">edit</a></li>
 <li><a href="javascript:fnLoadDelete();">delete</a></li>
 <li><a href="javascript:fnLoadReorder();">reorder</a></li>
