--- a/preferences.html
+++ b/preferences.html
@@ -20,9 +20,10 @@
 <!--#include virtual="preferences-reorder.html" -->
 <!--#include virtual="preferences-tripdefaults.html" -->
 <div id="idGenericModal" class="CSModalPage" style="display: none;"><div class="CSModalPopup">
-<span id="idGenericModalText"></span>
-<br /><br /><input type="button" value="okay" class="CSModalButton" onClick="fnShowHide('idGenericModal');" />
+<br /><span id="idGenericModalText"></span>
+<br /><br /><span id="idGenericModalButtons"></span><br /><br />
 </div></div>
+
 </body>
 </html>
 
