--- a/tripplanner.html
+++ b/tripplanner.html
@@ -107,7 +107,7 @@ fnDebugTrackSelect();
 </div>
 </div>
 <div id="idProgressModal" class="CSModalPage" style="display: none;"><div class="CSModalPopup">
-<img src="<!--#include virtual="loadimg-data.txt" -->" /><br /><br / >
+<br /><img src="<!--#include virtual="loadimg-data.txt" -->" /><br /><br / >
 <span id="idProgressModalText"></span>
 <br /><br /><input id="idProgressButton" type="button" value="cancel" class="CSModalButton" onClick="fnCancelLoc();"/>
 </div>
