completed modal refactoring and some items around empty arrays

--- a/preferences-delete.html
+++ b/preferences-delete.html
@@ -16,7 +16,7 @@ location to delete:<br />
 <div class="CsRightLink"><a href="javascript:fnSwitchPage('idPrefMenu');">preferences</a></div>
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><hr />
 
-<div class="CsCopyrightFooter">copyright 2010 nicholas barnard</div>
+<div class="CsCopyrightFooter"><a href="cr.html">copyright 2010</a> nicholas barnard</div>
 
 </div>
 </div>
