--- a/preferences-menu.html
+++ b/preferences-menu.html
@@ -14,7 +14,7 @@
 </ul>
 <br />
 <div class="CsRightLink"><a href="index.html">main</a></div><br /><hr />
-<div class="CsCopyrightFooter">copyright 2010 nicholas barnard</div><br /><br/>
+<div class="CsCopyrightFooter"><a href="cr.html">copyright 2010</a> nicholas barnard</div><br /><br/>
 </div>
 </div>
 
