--- a/preferences-tripdefaults.html
+++ b/preferences-tripdefaults.html
@@ -72,6 +72,6 @@ fnDebugTrackSelect();
 <br /><br /><input type="button" onclick="fnSavePrefs();" value="save trip defaults"></form>
 <div class="CsRightLink"><a href="javascript:fnSwitchPage('idPrefMenu');">preferences</a></div>
 <br /><br /><hr />
-<div class="CsCopyrightFooter">copyright 2010 nicholas barnard</div>
+<div class="CsCopyrightFooter"><a href="cr.html">copyright 2010</a> nicholas barnard</div>
 </div>
 </div>
