--- a/tripplanner.html
+++ b/tripplanner.html
@@ -36,7 +36,7 @@
 <input type="checkbox" style="display: none;" value="Y" name="Atr" />
 
 
-<div style="float: left;">start:</div><div class="CsRightLink">about</div><br />
+<div style="float: left;">start:</div><div class="CsRightLink"><a href="abt.html">about</a></div><br />
 <select name="nmOriginationPull" onchange="fnLocSelect();">
 <script>
 fnFillLoc();
@@ -99,7 +99,7 @@ fnDebugTrackSelect();
 </div>
 
 </form>
-<div class="CsCopyrightFooter">copyright 2010 nicholas barnard</div>
+<div class="CsCopyrightFooter"><a href="cr.html">copyright 2010</a> nicholas barnard</div>
 </div>
 <div id="idGenericModal" class="CSModalPage" style="display: none;"><div class="CSModalPopup">
 <span id="idGenericModalText"></span>
