added tools to bzr, some minor tweaks related to compression

--- a/preferences.html
+++ b/preferences.html
@@ -2,15 +2,8 @@
 <head>
 <title>metro mobile: preferences</title>
 <meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
-<style type="text/css">
-<!--#include virtual="preferences.css" -->
-<!--#include virtual="common.css" -->
-</style>
-<script>
-<!--#include virtual="preferences.js" -->
-<!--#include virtual="common.js" -->
-</script>
-<link rel="apple-touch-icon" href="logo.png" />
+<style type="text/css"><!--#include virtual="preferences.css" --><!--#include virtual="common.css" --></style>
+<script><!--#include virtual="preferences.js" --><!--#include virtual="common.js" --></script>
 </head>
 <body onload="fnLoadLogo('idPrefMenu');fnRandomHash();" onunload="fnRandomHash();">
 <!--#include virtual="preferences-menu.html" -->
