--- a/tripplanner.html
+++ b/tripplanner.html
@@ -2,14 +2,8 @@
 <head>
 <title>metro mobile</title>
 <meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
-<style type="text/css">
-<!--#include virtual="common.css" -->
-</style>
-<script>
-<!--#include virtual="tripplanner.js" -->
-<!--#include virtual="common.js" -->
-</script>
-<link rel="apple-touch-icon" href="logo.png" />
+<style type="text/css"><!--#include virtual="common.css" --></style>
+<script><!--#include virtual="tripplanner.js" --><!--#include virtual="common.js" --></script>
 </head><body onLoad="fnUpdatePage();">
 <div class="CsMainHeader"><img alt="Bus Logo" src="<!--#include virtual="logo-data.txt" -->" height="57" width="57" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;" />metro mobile</div>
 <div class="CsMainBody">
