tweaking some over agressive compression

--- a/preferences.html
+++ b/preferences.html
@@ -3,7 +3,8 @@
 <title>metro mobile: preferences</title>
 <meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
 <style type="text/css"><!--#include virtual="preferences.css" --><!--#include virtual="common.css" --></style>
-<script><!--#include virtual="preferences.js" --><!--#include virtual="common.js" --></script>
+<script><!--#include virtual="preferences.js" -->
+<!--#include virtual="common.js" --></script>
 </head>
 <body onload="fnLoadLogo('idPrefMenu');fnRandomHash();" onunload="fnRandomHash();">
 <!--#include virtual="preferences-menu.html" -->
