--- a/tripplanner.html
+++ b/tripplanner.html
@@ -3,7 +3,8 @@
 <title>metro mobile</title>
 <meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
 <style type="text/css"><!--#include virtual="common.css" --></style>
-<script><!--#include virtual="tripplanner.js" --><!--#include virtual="common.js" --></script>
+<script><!--#include virtual="tripplanner.js" -->
+<!--#include virtual="common.js" --></script>
 </head><body onLoad="fnUpdatePage();">
 <div class="CsMainHeader"><img alt="Bus Logo" src="<!--#include virtual="logo-data.txt" -->" height="57" width="57" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;" />metro mobile</div>
 <div class="CsMainBody">
