Added copyright pages and some small tweaks

--- a/preferences-reorder.html
+++ b/preferences-reorder.html
@@ -8,7 +8,7 @@ metro mobile: reorder locations</div>
 
 
 <br />
-<div class="CsCopyrightFooter"><a href="cr.html">copyright 2010</a> nicholas barnard</div>
+<hr /><div class="CsCopyrightFooter"><a href="cr.html">copyright 2010</a> nicholas barnard</div>
 
 </div>
 </div>
