--- a/artisticlicense.html
+++ b/artisticlicense.html
@@ -8,8 +8,6 @@
 <div class="CsMainBody">
 <h2>Artistic License 2.0</h2>
 <p>
-Copyright (c) 2000-2006, The Perl Foundation.</p>
-<p>
 Everyone is permitted to copy and distribute verbatim copies of this license document, but changing it is not allowed.</p>
 <h3 id="preamble">Preamble</h3>
 <p>
@@ -82,7 +80,7 @@ Distribution of Compiled Forms of the Standard Version or Modified Versions with
 (14) Disclaimer of Warranty: THE PACKAGE IS PROVIDED BY THE COPYRIGHT HOLDER AND CONTRIBUTORS &quot;AS IS' AND WITHOUT ANY EXPRESS OR IMPLIED WARRANTIES. THE IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, OR NON-INFRINGEMENT ARE DISCLAIMED TO THE EXTENT PERMITTED BY YOUR LOCAL LAW. UNLESS REQUIRED BY LAW, NO COPYRIGHT HOLDER OR CONTRIBUTOR WILL BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, OR CONSEQUENTIAL DAMAGES ARISING IN ANY WAY OUT OF THE USE OF THE PACKAGE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
 
  </div>
-<hr /><div class="CsCopyrightFooter">excluding the artistic license, <a href="cr.html">copyright 2010</a> nicholas barnard</div>
+<hr /><div class="CsCopyrightFooter">License Copyright 2000-2006, The Perl Foundation.  Remaining content excluding the artistic license, <a href="cr.html">copyright 2010</a> nicholas barnard</div>
 </div>
 </body>
 </html>
