--- a/cr.html
+++ b/cr.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>metro mobile: copyright</title>
 <meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
 <style type="text/css"><!--#include virtual="common.css" --></style>
-</head><body>
+</head><body onload="setTimeout("window.scroll(0,1)", 5);">
 <div class="CsMainHeader"><img alt="Bus Logo" src="<!--#include virtual="logo-data.txt" -->" height="57" width="57" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;" />metro mobile: copyright</div>
 <div class="CsMainBody">
 <br />
