--- a/tools/debugcookieretrieve.html
+++ b/tools/debugcookieretrieve.html
@@ -3,7 +3,7 @@
 <title>metro mobile</title>
 <meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
 <style type="text/css">
-<!--#include virtual="common.css" -->
+<!--#include virtual="../common.css" -->
 </style>
 <script>
 <!--#include virtual="../tripplanner.js" -->
