fixed using quotes in settimeout('windows.scoll.....

--- a/artisticlicense.html
+++ b/artisticlicense.html
@@ -4,7 +4,7 @@
 <title>metro mobile: artistic license</title>
 <meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
 <style type="text/css"><!--#include virtual="common.css" --></style>
-</head><body onload="setTimeout("window.scroll(0,1)", 5);">
+</head><body onload="setTimeout('window.scroll(0,1)', 5);">
 <div class="CsMainHeader"><img alt="Bus Logo" src="<!--#include virtual="logo-data.txt" -->" height="57" width="57" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;" />metro mobile: artistic license</div>
 <div class="CsMainBody">
 <h2>Artistic License 2.0</h2>
