--- a/preferences.html
+++ b/preferences.html
@@ -7,7 +7,7 @@
 <script><!--#include virtual="preferences.js" -->
 <!--#include virtual="common.js" --></script>
 </head>
-<body onload="setTimeout("window.scroll(0,1)", 5);fnLoadLogo('idPrefMenu');fnRandomHash();" onunload="fnRandomHash();">
+<body onload="setTimeout('window.scroll(0,1)', 5);fnLoadLogo('idPrefMenu');fnRandomHash();" onunload="fnRandomHash();">
 <!--#include virtual="preferences-menu.html" -->
 <!--#include virtual="preferences-add.html" -->
 <!--#include virtual="preferences-delete.html" -->
