added geekfaq and faq

--- a/cr.html
+++ b/cr.html
@@ -8,7 +8,7 @@
 <div class="CsMainHeader"><img alt="Bus Logo" src="<!--#include virtual="logo-data.txt" -->" height="57" width="57" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;" />metro mobile: copyright</div>
 <div class="CsMainBody">
 <br />
-metro mobile is released under the <a href="artisticlicense.html">artistic license 2.0</a>.
+metro mobile is copyrighted by Nicholas Barnard, and is released under the <a href="artisticlicense.html">artistic license 2.0</a>.
 For license purposes:<ul>
 <li>metro mobile as provided at <a href="http://metromobile.info">http://metromobile.info</a> is the compiled form.</li>
 <li>metro mobile as provided at <A href="http://www.inmff.net/mm">http://www.inmff.net/mm</a> is the source form.</li></ul>
