--- a/abt.html
+++ b/abt.html
@@ -4,12 +4,13 @@
 <title>metro mobile: faq</title>
 <meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
 <style type="text/css"><!--#include virtual="common.css" --></style>
+<script><!--#include virtual="abt.js" --></script>
 </head><body onload="setTimeout("window.scroll(0,1)", 5);">
 <div class="CsMainHeader"><img alt="Bus Logo" src="<!--#include virtual="logo-data.txt" -->" height="57" width="57" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;" />metro mobile: faq</div>
 <div class="CsMainBody">
 <div class="CsRightLink"><a href="index.html">main</a></div>
 <h4>What is metro mobile?</h4>
-metro mobile is a mobile optimized front end to <a href="http://metro.kingcounty.gov/">King County Metro's</a> online <a href="http://tripplanner.kingcounty.gov/cgi-bin/itin_page.pl">Trip Planner</a>.  It implements many enhancements including the ability to:
+metro mobile is a mobile-optimized front end to <a href="http://metro.kingcounty.gov/">King County Metro's</a> online <a href="http://tripplanner.kingcounty.gov/cgi-bin/itin_page.pl">Trip Planner</a>.  It implements many enhancements including the ability to:
 <ul>
 <li>Store Locations</li>
 <li>Find location via GPS</li>
@@ -23,7 +24,7 @@ metro mobile was written by <a href="http://www.inmff.net">Nicholas Barnard</a>.
 Many people have found the transit directions as provided by Google Maps just don't make sense in the real world, and it produces directions that an actual transit rider wouldn't consider an acceptable itinerary.
 
 <h4>How much does metro mobile cost?</h4>
-metro mobile is free, although donations are accepted via PayPal and Google Payments.  If you find metro mobile useful, please consider a donation.  Significant time, as well as hosting costs, and many many extra pots of tea and coffee beverages at cafes around the area have been invested into its development.
+metro mobile is free, although donations are accepted via <a href="javascript:document.nmPayPal.submit();">PayPal</a> and <a href="javascript:setTimeout('window.scroll(0,1)', 5);fnShowHide('idGoogleModal');">Google Payments</a>.  If you find metro mobile useful, please consider a donation.  Significant time, as well as hosting costs, and many many extra pots of tea and coffee beverages at cafes around the area have been invested into its development.
 
 <h4>How can I add, save, edit, or reorder usual stops?</h4>
 You can add, save, edit, or reorder frequent starting and ending locations by going to <a href="/pref.html">preferences</a>.
@@ -56,6 +57,26 @@ Send them along on the <a href="contact.html">contact</a> page.
 <div class="CsRightLink"><a href="index.html">main</a></div><br />
 <hr /><div class="CsCopyrightFooter"><a href="cr.html">copyright 2010</a> nicholas barnard</div>
 </div>
+<div id="idGoogleModal" class="CSModalPage" style="display: none;"><div class="CSModalPopup">
+<h3>donation via google checkout</h3>
+please enter donation amount: <form name="nmGoogleCheckout" action="https://checkout.google.com/api/checkout/v2/checkoutForm/Merchant/158644214600486" id="BB_BuyButtonForm" method="post" name="BB_BuyButtonForm" target="_top">
+<input name="item_option_price_1" type="text" inputmode="latin digits" size="5" maxlength="5" onkeypress="return fnNumbersOnly(this, event)"/>
+<br /><br /><input name="item_selection_1" type="hidden" value="1">
+<input name="item_option_name_1" type="hidden" value="Donation"/>
+<input name="item_option_description_1" type="hidden" value="Donation"/>
+<input name="item_option_quantity_1" type="hidden" value="1"/>
+<input name="item_option_currency_1" type="hidden" value="USD"/>
+<input type="submit" value="donate" class="CSModalButton" />
+<input type="button" value="cancel" class="CSModalButton" onClick="fnShowHide('idGoogleModal');" />
+</form>
+</div>
+<form name="nmPayPal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="QQN4NMYVA7ZTL">
+<input type="hidden" name="page_style" value="metromobile">
+</form>
+
 </body>
 </html>
 
