added contact pages

--- a/geekfaq.html
+++ b/geekfaq.html
@@ -26,6 +26,10 @@ I have utilized GNU Emacs 22.3.1, and Safari 5.0's Web Inspector.  I've not used
 <h4>Where do I find the uncompressed version of metro mobile?</h4>
 The uncompressed version is provided at <a href="http://www.inmff.net/mm/">http://www.inmff.net/mm/</a>, additionally a version before the files have been combined via server side includes is available at <a href="http://www.inmff.net/mm/nossi">http://www.inmff.net/mm/nossi</a>.
 
+
+<h4>Where is metro mobile hosted?</h4>
+metro mobile is hosted at <a href="http://www.forest.net">digital.forest</a> in South Seattle.
+
 <h4>What is on the roadmap for metro mobile?</h4>
 I've got more ideas up my sleeves, but I can't tell you everything!
 
@@ -37,10 +41,3 @@ Send them along on the <a href="contact.html">contact</a> page.
 </div>
 </body>
 </html>
-
-
-
-
-
-<!--  LocalWords:  DOCTYPE
- -->
