--- a/preferences.html
+++ b/preferences.html
@@ -14,10 +14,8 @@
 <!--#include virtual="preferences-modify.html" -->
 <!--#include virtual="preferences-reorder.html" -->
 <!--#include virtual="preferences-tripdefaults.html" -->
-<div id="idGenericModal" class="CSModalPage" style="display: none;"><div class="CSModalPopup">
-<br /><span id="idGenericModalText"></span>
-<br /><br /><span id="idGenericModalButtons"></span><br /><br />
-</div></div>
+<!--#include virtual="genericmodal.html" -->
+
 
 </body>
 </html>
