--- a/tripplanner.html
+++ b/tripplanner.html
@@ -97,11 +97,7 @@ fnDebugTrackSelect();
 </form>
 <div class="CsCopyrightFooter"><a href="cr.html">copyright 2010</a> nicholas barnard</div>
 </div>
-<div id="idGenericModal" class="CSModalPage" style="display: none;"><div class="CSModalPopup">
-<span id="idGenericModalText"></span>
-<br /><br /><input type="button" value="okay" class="CSModalButton" onClick="fnShowHide('idGenericModal');" />
-</div>
-</div>
+<!--#include virtual="genericmodal.html" -->
 <div id="idProgressModal" class="CSModalPage" style="display: none;"><div class="CSModalPopup">
 <br /><img src="<!--#include virtual="loadimg-data.txt" -->" /><br /><br / >
 <span id="idProgressModalText"></span>
