--- a/cr.html
+++ b/cr.html
@@ -18,6 +18,7 @@ metro mobile also contains the following code:<ul>
 <li><a href="http://www.quirksmode.org/js/cookies.html">Cookie Handling Code</a> from <a href="http://www.quirksmode.org/">QuirksMode</a>.
 <li><a href="http://snipplr.com/view/825/ordinal-number/">Ordinal Number</a> from <a href="http://snipplr.com">Snipplr</a>.
 <li><a href="http://code.google.com/p/thefriendlyplaces/source/browse/trunk/jscript/querystring.js?spec=svn7&r=7">Query string</a>, which is released under the Simplified BSD License.</li>
+<li><a href="http://javascript.internet.com/forms/numbers-only.html">Numbers Only</a>  from <a href="http://javascript.internet.com">The JavaScript Source</a> created by <a href="http://www.idocs.com">Idocs</a>.</li>
 </ul>
    
 <hr /><div class="CsCopyrightFooter"><a href="cr.html">copyright 2010</a> nicholas barnard</div>
