fixed contact page

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
 <title>metro mobile: contact</title>
 <meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
-<style type="text/css"><!--#include virtual="common.css" --></styl<script><!--#include virtual="common.js" -->
+<style type="text/css"><!--#include virtual="common.css" --></style><script><!--#include virtual="common.js" -->
 function checkreturn() {
    if (document.Contact.email.value.indexOf('@') == -1) {
       fnLoadModal('please enter an email address');
