changed default time from arrive to depart, also fixed bug when outside of metro's area

--- a/abt.html
+++ b/abt.html
@@ -6,7 +6,7 @@
 <style type="text/css"><!--#include virtual="common.css" --></style>
 <script><!--#include virtual="abt.js" --></script>
 </head><body onload="setTimeout("window.scroll(0,1)", 5);">
-<div class="CsMainHeader"><img alt="Bus Logo" src="<!--#include virtual="logo-data.txt" -->" height="57" width="57" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;" />metro mobile: faq</div>
+<div class="CsMainHeader"><img alt="Bus Logo" src="<!--#include virtual="logo-data.txt" -->" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;" />metro mobile: faq</div>
 <div class="CsMainBody">
 <div class="CsRightLink"><a href="index.html">main</a></div>
 <h4>What is metro mobile?</h4>
