--- a/mailmissing.html
+++ b/mailmissing.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
 <style type="text/css"><!--#include virtual="common.css" --></style>
 </head><body onload="setTimeout("window.scroll(0,1)", 5);">
-<div class="CsMainHeader"><img alt="Bus Logo" src="<!--#include virtual="logo-data.txt" -->" height="57" width="57" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;" />metro mobile: email missing</div>
+<div class="CsMainHeader"><img alt="Bus Logo" src="<!--#include virtual="logo-data.txt" -->" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;" />metro mobile: email missing</div>
 <div class="CsMainBody">
 <div class="CsRightLink"><a href="index.html">main</a></div>
 <br />
